fix: calculate table width with gap system

--- a/styles/components/footer.css
+++ b/styles/components/footer.css
@@ -18,7 +18,6 @@ footer {
 
   & table:not(table table) {
     --gap: 2rem;
-    --count: 4;
 
     & td:not(td td) {
       vertical-align: top;
